kubernetes/clusters/main/apps/ingress/ciliumnetworkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: default-deny
  namespace: ingress
spec:
  endpointSelector: {}
  egress:
    - {}
  ingress:
    - {}
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-all-within-namespace
  namespace: &namespace ingress
spec:
  endpointSelector:
    matchLabels: {}
  egress:
  - toEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": *namespace
    authentication:
      mode: required
  ingress:
  - fromEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": *namespace
    authentication:
      mode: required
# todo: trim down
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-nginx-egress-to-all
  namespace: &namespace ingress
spec:
  endpointSelector:
    matchLabels:
      k8s:app.kubernetes.io/name: ingress-nginx
      k8s:app.kubernetes.io/instance: nginx
  egress:
  - toEndpoints:
    - matchLabels:
        ingress.home.arpa/nginx: allow
    authentication:
      mode: required
# todo: move to common
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: default-deny
  namespace: cert-manager
spec:
  endpointSelector: {}
  egress:
    - {}
  ingress:
    - {}
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-all-within-namespace
  namespace: &namespace cert-manager
spec:
  endpointSelector:
    matchLabels: {}
  egress:
  - toEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": *namespace
    authentication:
      mode: required
  ingress:
  - fromEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": *namespace
    authentication:
      mode: required
